--- a/ServerSite/inc/dbconfig.ini
+++ b/ServerSite/inc/dbconfig.ini
@@ -2,5 +2,5 @@
 [database]
 dbname = "imagehub"
 dbhost = "localhost"
-dbuser = "imagehubuser"
-dbpass = "imagehubpass"
+dbuser = "root"
+dbpass = ""
